# 2026Practical-training--demo

./: CMakeLists.txt  CMakeSettings.json  IconGenerator.java  copy_icons.ps1  httplib.h  main.cpp  shixun.sln  shixun.vcxproj  shixun.vcxproj.filters
app/src/main/res/mipmap-anydpi-v26/: practice_trainning_launcher.xml
cpp/shixun/: .gitignore  CMakeLists.txt  CMakeSettings.json  httplib.h  main.cpp
